Fix layout issues

--- a/scss/styles.scss
+++ b/scss/styles.scss
@@ -11,6 +11,11 @@ td {
     text-align: center;
 
 }
+.page {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
 .table-input {
     width: 100%;
     border: none;
